--- a/knife.compose.tpl.yml
+++ b/knife.compose.tpl.yml
@@ -1,16 +1,13 @@
 version: '2'
 services:
   nginx:
-    extends:
-      file: services.yml
-      service: nginx
+    build:
+      dockerfile: nginx.Dockerfile
     volumes_from:
       - data
     depends_on:
       - data
 
   data:
-    image: data:<%= @stand.dump[:docker_tag] %>
-    extends:
-      file: services.yml
-      service: data
+    build:
+      dockerfile: data.Dockerfile
