--- a/services.yml
+++ b/services.yml
@@ -1,9 +1,6 @@
 version: '2'
 services:
   nginx:
-    build:
-      dockerfile: nginx.Dockerfile
+    build: nginx
   data:
-    build:
-      dockerfile: data.Dockerfile
-
+    build: data
