--- a/services.yml
+++ b/services.yml
@@ -1,6 +1,9 @@
 version: '2'
 services:
-  nginx:
-    build: nginx
+  app:
+    build:
+      dockerfile: nginx/Dockerfile
   data:
-    build: data
+    build:
+      dockerfile: data/Dockerfile
+
