--- a/knife.compose.tpl.yml
+++ b/knife.compose.tpl.yml
@@ -4,11 +4,13 @@ services:
     extends:
       file: services.yml
       service: app
+    image: <%= @stand.project.docker_repo %>_app_<%= @stand.short_reference %>
     volumes_from:
       - data
     depends_on:
       - data
   data:
+    image: <%= @stand.project.docker_repo %>_data_<%= @stand.short_reference %>
     extends:
       file: services.yml
       service: data
