--- a/knife.compose.tpl.yml
+++ b/knife.compose.tpl.yml
@@ -4,7 +4,7 @@ services:
     extends:
       file: services.yml
       service: app
-    image: <%= @stand.project.docker_repo %>_app:<%= @stand.short_reference %>
+    image: app:<%= @stand.short_reference %>
     volumes_from:
       - data
     depends_on:
@@ -12,7 +12,7 @@ services:
     ports:
       - 10080:80
   data:
-    image: <%= @stand.project.docker_repo %>_data:<%= @stand.short_reference %>
+    image: data:<%= @stand.short_reference %>
     extends:
       file: services.yml
       service: data
