--- a/knife.yml
+++ b/knife.yml
@@ -3,4 +3,8 @@ deploy_config: knife.compose.tpl.yml
 
 urls:
   Test: <%= @stand[:url] %>/test
-  
+
+data_container: 'data'
+code_containers:
+  - app
+
