fix(consul): Add health checking for nginx service (#3)
* Add health checking for nginx service

* Dockerfile: delete consul from data

--- a/data/Dockerfile
+++ b/data/Dockerfile
@@ -1,12 +1,8 @@
-FROM devopsftw/baseimage:dev
+FROM busybox
 
 # YEKT locale
 ENV TZ=Asia/Yekaterinburg
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-
-ADD config/data.json /etc/consul/conf.d/data.json
-
-ENV CONSUL_HOST consul
 
 RUN mkdir /data && echo "Hello world" > /data/index.html
 CMD ["echo", "data volume"]
