--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,21 +1,1 @@
-FROM abakpress/knife-base
-
-RUN apt-get update && \
-  apt-get install -yq --no-install-recommends nginx netcat && \
-  echo "\ndaemon off;" >> /etc/nginx/nginx.conf && \
-  chown -R www-data:www-data /var/lib/nginx && \
-  apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-# Define mountable directories
-#VOLUME ["/etc/nginx/sites-enabled", "/etc/nginx/certs", "/etc/nginx/conf.d", "/var/log/nginx", "/var/www/html"]
-
-ADD nginx/services/nginx.sh /etc/service/nginx/run
-ADD nginx/config/* /etc/consul/conf.d/
-
-ADD nginx/services/tcp.sh /etc/service/tcp/run
-ADD nginx/services/udp.sh /etc/service/udp/run
-
-ENV CONSUL_HOST consul
-
-# nginx http/https, netcat udp/tcp
-EXPOSE 80 443 3500 3600
+FROM localhost:5000/baseimage
