--- a/nginx/Dockerfile.base
+++ b/nginx/Dockerfile.base
@@ -6,7 +6,7 @@ RUN apt-get update && \
   chown -R www-data:www-data /var/lib/nginx && \
   apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
- Define mountable directories
+ #Define mountable directories
 VOLUME ["/etc/nginx/sites-enabled", "/etc/nginx/certs", "/etc/nginx/conf.d", "/var/log/nginx", "/var/www/html"]
 
 ADD nginx/services/nginx.sh /etc/service/nginx/run
